[REFACTOR] Add Makefile, correct API documentations, move middleware package, rename modules
